[package]
name = "wasm-audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.60", features = ['console'] }
console_error_panic_hook = { version = "0.1", optional = true }

# nightly-only for now
# wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Optimize for small code size.
# opt-level = "s"